# libtakeover

./: .gitignore  .gitmodules  Makefile.am  autogen.sh  configure.ac  libtakeover.pc.in
include/: Makefile.am
include/libtakeover/: TKexception.hpp  libtakeover.hpp
inject_ciritcald/: inject_ciritcald.entitlements
libtakeover/: AppDelegate.h  AppDelegate.m  Makefile.am  TKexception.hpp  ViewController.h  ViewController.mm  all_libtakeover.h  libtakeover.cpp  libtakeover_test.c  libtakeover_test.h  main.cpp  main.m
libtakeover.xcodeproj/: project.pbxproj
tools/: Ent.plist  Makefile  Makefile.am  inject_criticald.cpp  orphan_commander.cpp
